comment line 20 and delete bottom comments

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,7 +8,7 @@ set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
 
-set(CMAKE_BUILD_TYPE debug)
+set(CMAKE_BUILD_TYPE Debug)
 
 # Warnings
 add_compile_options(-Wall)
@@ -17,14 +17,14 @@ add_compile_options(-Wall)
 include_directories(${PROJECT_SOURCE_DIR}/include)
 
 # Get the source code
-file(GLOB DATA_TYPES ${PROJECT_SOURCE_DIR}/src/core/data_types/*.cpp)
+# file(GLOB DATA_TYPES ${PROJECT_SOURCE_DIR}/src/core/data_types/*.cpp)
 
-set(CORE ${DATA_TYPES})
-# set(ADD)
-set(NUOSTL ${CORE})
+set(CORE
+    ${DATA_TYPES}
+)
+
+set(NUOSTL
+    ${CORE}
+)
 
 add_library(NuoSTLLib SHARED ${NUOSTL})
-
-# add_subdirectory(${PROJECT_SOURCE_DIR}/tests)
-
-# add_executable(test ${NUOSTL})
